<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HoneyBadger</string>
    <string name="intro_header">Welcome to the HoneyBadger Firewall!</string>
    <string name="supwarn_text">Suppress Warnings</string>
    <string name="showicon_text">Disable Icons</string>
    <string name="def_rule">Default Rule:</string>    
    
    <!-- Raw rules strings -->
    <string name="raw_rule_header">Raw IPTables rules.</string>
    
    <!-- Preference strings -->
    <string name="set_pref_header">Set Preferences:</string>
    <string name="pref_note">*Note: This rule determines whether all network traffic will be initially blocked or allowed.</string>
    <string name="pref_downloaded_rules">Updating of Downloaded Rules</string>
    <string name="pref_warnings">Warnings</string>
    <string name="pref_raw_iptables_rules">Raw IPTables rules</string>
    <string name="pref_select_tab">Choose Starting Tab</string>
    <string name="pref_icons">Enable/Disable Icons in Apps Tab</string>
    
    <string name="intro_body">
        <lo>
            <li>To enable/disable firewall > menu > \"Enable/Disable HB\".\n</li>
            <li>To set rules for applications > \"Apps\" tab.\n</li>
            <li>In Apps tab, press wifi/cell icons to select/deselect all in column.\n</li>
            <li>To add a new IP or URL-based rule > \"Add Rules\" tab.\n</li>            
            <li>To view current rule > \"View Rules\" tab.\n</li>
            <li>To view logged network traffic > \"Log\" tab.\n</li>
            <li>To automatically generare rules blocking known malicious sites > \"Add Rules\" tab > \"Download IPs\" button.\n</li>
            <li>To clear automatically generared rules > \"Add Rules\" tab > \"Clear Downloaded IPs\" button.\n</li>
            <li>To export rules > go to Apps or View Rules > menu > \"Export Rules\" > enter desired file name > press \"Save\".\n</li>
            <li>To import rules > go to Apps or View Rules > menu > \"Import Rules\" > enter name of file containing rules > press \"Import\".\n</li>
            <li>To set automatically created rules to be updated every 24 hours > menu > \"Settings\" > check "Enable Auto Update".\n</li>
            <li>To switch between block/allow scheme and enable/disable logging > menu > \"Settings\".\n</li>
            <li>To view raw IPTables rules > menu > \"Settings\" > press \"View Rules\".\n</li>
        </lo>
    </string>
    
    <!-- Description Strings -->
    <string name="desc_app_icon">App Icon</string>
    <string name="desc_banner">Homescreen Banner</string>
    <string name="desc_wifi_icon">Wifi Icon</string>
    <string name="desc_cell_icon">Cell Icon</string>
    <string name="desc_splash">Splash Screen</string>
    
    <string name="allow_all">Allow All</string>
    <string name="and">And:</string>
    <string name="apply">Apply</string>
    <string name="apply_to">Apply to:</string>
    <string name="block_all">Block All</string>    
    <string name="cell_data">Cell Data</string>
    <string name="check_all">Check All</string>
    <string name="clear_all">Clear All</string>
    <string name="clear_down">Clear Downloaded IPs</string>
    <string name="dis_log">Disable Logging</string>
    <string name="down_ips">Download IPs</string>
    <string name="en_auto">Enable Auto Update</string>
    <string name="en_log">Enable Logging</string>
    <string name="enter_ip">Enter IP Address:</string>    
    <string name="enter_url">Enter URL:</string>
    <string name="go_back">Go Back</string>
    <string name="in_traff">Incoming Traffic</string>
    <string name="log_rule">Logging Rule</string> 
    <string name="note">*Note: This rule will apply only to the IP addresses available from resolving the domain at the time it is set.</string>   
    <string name="or">OR</string>
    <string name="out_traff">Outgoing Traffic</string>
    <string name="select_block">Select Applications to Block</string>
    <string name="show_more">Show More</string>
    <string name="view_rules">View Rules</string>
    <string name="wi_fi">Wi-Fi</string>  
    
    <!-- Tab radios -->
    <string name="radio_home">Home</string>
    <string name="radio_apps">Apps</string>
    <string name="radio_add">Add Rules</string>
    <string name="radio_view">View Rules</string>
    <string name="radio_log">Log</string>
    
    <!-- __________________________________Menu Strings__________________________________ -->
    
    <!-- General -->
    <string name="menu_export">Export Rules</string>
    <string name="menu_import">Import Rules</string>    
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    
    <!-- menu_app -->
    <string name="menu_app_refresh">Refresh Apps List</string>
    
    <!-- menu_view_rules -->     
    <string name="menu_view_rules_raw">Raw IPTables Rules</string>   
    <string name="menu_view_rules_refresh">Refresh Rules</string> 
    
    <!-- menu_log -->
    <string name="menu_log_clear">Clear Log</string> 
    <string name="menu_log_refresh">Refresh Log</string> 

</resources>