<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/search_rules"
        android:actionViewClass="com.actionbarsherlock.widget.SearchView"
        android:icon="@drawable/action_search"
        android:showAsAction="always|collapseActionView"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/refresh_rules"
        android:icon="@drawable/navigation_refresh"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_view_rules_refresh"/>
    <item
        android:id="@+id/exportIPRules"
        android:title="@string/menu_export"/>
    <item
        android:id="@+id/importIPRules"
        android:title="@string/menu_import"/>
    <item
        android:id="@+id/settingsFromViewRules"
        android:icon="@drawable/ic_menu_settings_holo_light"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/rv_raw_rules"
        android:title="@string/menu_view_rules_raw"/>

</menu>