<?xml version="1.0" encoding="utf-8"?>
<!--
 * Version: 1.1
 * Date of last modification: 4 MAR 2012
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/red"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/addRulelabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_pref_header"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/masterRule"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/def_rule"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/notelabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_note" />

        <RadioGroup
            android:id="@+id/radioGroupBlocking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radioBlock"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/block_all" />

            <RadioButton
                android:id="@+id/radioAllow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/allow_all" />
        </RadioGroup>

        <TextView
            android:id="@+id/logRule"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_rule"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radioLogOn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/en_log" />

            <RadioButton
                android:id="@+id/radioLogOff"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dis_log" />
        </RadioGroup>

        <TextView
            android:id="@+id/pref_dl_rules_hdr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_downloaded_rules"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkAutoUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en_auto" />

        <TextView
            android:id="@+id/pref_warn_hdr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_warnings"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkSuppressWarnings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supwarn_text" />

        <TextView
            android:id="@+id/pref_show_icons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_icons"
            android:textStyle="bold" />
        
        <CheckBox
            android:id="@+id/checkHideIcons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showicon_text" />

        <TextView
            android:id="@+id/pref_select_tab"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_select_tab"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupTabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radioHome"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/radio_home" />

            <RadioButton
                android:id="@+id/radioApps"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/radio_apps" />

            <RadioButton
                android:id="@+id/radioAddRules"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/radio_add" />

            <RadioButton
                android:id="@+id/radioViewRules"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/radio_view" />

            <RadioButton
                android:id="@+id/radioLog"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/radio_log" />
        </RadioGroup>

        <TextView
            android:id="@+id/pref_raw_rules_hdr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_raw_iptables_rules"
            android:textStyle="bold"
            android:layout_marginTop="5dip" />

        <Button
            android:id="@+id/pref_raw_rule_button"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dip"
            android:text="@string/view_rules" />

    </LinearLayout>

</ScrollView>