<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/search_log"
        android:actionViewClass="com.actionbarsherlock.widget.SearchView"
        android:icon="@drawable/action_search"
        android:showAsAction="always|collapseActionView"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/refresh_log"
        android:icon="@drawable/navigation_refresh"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_log_refresh"/>
    <item
        android:id="@+id/settingsFromLog"
        android:icon="@drawable/ic_menu_settings_holo_light"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/clearLog"
        android:title="@string/menu_log_clear"/>

</menu>